--- a/app/src/main/res/layout-sw600dp/bought_item_list.xml
+++ b/app/src/main/res/layout-sw600dp/bought_item_list.xml
@@ -36,7 +36,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvListPeriodItem"
+            android:id="@+id/tvNameLCCS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -47,7 +47,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvListPeriodInterest"
+            android:id="@+id/tvValueLCCS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
@@ -65,7 +65,7 @@
             android:text="/" />
 
         <TextView
-            android:id="@+id/tvListPeriodCapital"
+            android:id="@+id/tvStatusLCCS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -77,7 +77,7 @@
             android:textStyle="italic" />
 
         <ImageButton
-            android:id="@+id/btnDeleteItemTCC"
+            android:id="@+id/btnDeleteItemLCCS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
@@ -171,7 +171,7 @@
         tools:layout_editor_absoluteX="5dp">
 
         <TextView
-            android:id="@+id/lbWarningICC"
+            android:id="@+id/lbCreditCardLCCS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -180,7 +180,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvListPeriodTotalQuote"
+            android:id="@+id/tvCreditCardLCCS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
