--- a/app/src/main/res/layout-sw600dp/credit_card_item_list.xml
+++ b/app/src/main/res/layout-sw600dp/credit_card_item_list.xml
@@ -27,7 +27,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/lbCutOffDayItemCC"
+                android:id="@+id/lbValueLCCS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -37,7 +37,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvListPeriodInterest"
+                android:id="@+id/tvValueLCCS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -49,7 +49,7 @@
                 android:textStyle="italic" />
 
             <TextView
-                android:id="@+id/tvListPeriodItem"
+                android:id="@+id/tvNameLCCS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -70,7 +70,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvListPeriodCapital"
+                android:id="@+id/tvStatusLCCS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -81,7 +81,7 @@
                 android:textStyle="italic" />
 
             <TextView
-                android:id="@+id/lbWarningICC"
+                android:id="@+id/lbCreditCardLCCS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -92,7 +92,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvListPeriodTotalQuote"
+                android:id="@+id/tvCreditCardLCCS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -102,14 +102,14 @@
                 android:textColor="@android:color/primary_text_dark" />
 
             <ImageButton
-                android:id="@+id/btnEditICC"
+                android:id="@+id/btnEditLCCS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
                 app:srcCompat="@drawable/ic_baseline_edit_24" />
 
             <ImageButton
-                android:id="@+id/btnDeleteItemTCC"
+                android:id="@+id/btnDeleteItemLCCS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
