--- a/app/src/main/res/layout-sw600dp/quotes_paid_item_list.xml
+++ b/app/src/main/res/layout-sw600dp/quotes_paid_item_list.xml
@@ -35,7 +35,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvListPeriodItem"
+                    android:id="@+id/tvNameLCCS"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -54,7 +54,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/tvListPeriodTotalQuote"
+                    android:id="@+id/tvCreditCardLCCS"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
@@ -86,7 +86,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/tvListPeriodInterest"
+                    android:id="@+id/tvValueLCCS"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
@@ -105,7 +105,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/tvListPeriodCapital"
+                    android:id="@+id/tvStatusLCCS"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
