--- a/app/src/main/res/layout/tax_item_list.xml
+++ b/app/src/main/res/layout/tax_item_list.xml
@@ -27,7 +27,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvListPeriodItem"
+                android:id="@+id/tvNameLCCS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -60,7 +60,7 @@
                 android:textSize="14sp" />
 
             <ImageButton
-                android:id="@+id/btnDeleteItemTCC"
+                android:id="@+id/btnDeleteItemLCCS"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
