se realiza copia del codigo mientras se realiza codigo para realizar backup del codigo actual debido a que el nuevo codigo eliminara data de la anterior version, asi que toca implementar el backup primero antes de las nuevas funcionalidades
Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/layout/list_credit_card_quote.xml
+++ b/app/src/main/res/layout/list_credit_card_quote.xml
@@ -323,7 +323,7 @@
             android:text="@string/add_cash_advance" />
 
         <Button
-            android:id="@+id/btnAddBuyWallet"
+            android:id="@+id/btnAddBuyWalletLCCQ"
             android:layout_width="220dp"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
