--- a/app/src/main/res/layout-land/list_credit_card_quote.xml
+++ b/app/src/main/res/layout-land/list_credit_card_quote.xml
@@ -349,7 +349,7 @@
                 android:visibility="invisible" />
 
             <Button
-                android:id="@+id/btnAddBuyWallet"
+                android:id="@+id/btnAddBuyWalletLCCQ"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_margin="5dp"
