--- a/app/src/main/res/layout/cash_advance_credit_card.xml
+++ b/app/src/main/res/layout/cash_advance_credit_card.xml
@@ -128,8 +128,8 @@
             android:ems="10"
             android:hint="@string/money_hint"
             android:inputType="numberSigned|numberDecimal"
-            android:numeric="decimal"
-            android:singleLine="false"
+            android:numeric="signed|decimal"
+            android:singleLine="true"
             android:textAlignment="textEnd" />
     </LinearLayout>
 
