--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,21 +16,26 @@
             app:destination="@id/list_bought"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"
-            app:popUpToInclusive="false" />
+            app:popUpToInclusive="true"
+            />
         <action
             android:id="@+id/action_item_menu_side_boughtmade_to_buy_credit_card"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"
-            app:destination="@id/buy_credit_card" />
+            app:destination="@id/buy_credit_card"
+            app:popUpToInclusive="true"/>
         <action
             android:id="@+id/action_item_menu_side_boughtmade_to_cash_advance_fragment"
-            app:destination="@id/cash_advance_fragment" />
+            app:destination="@id/cash_advance_fragment"
+            app:popUpToInclusive="true"/>
         <action
             android:id="@+id/action_item_menu_side_boughtmade_to_list_periods"
-            app:destination="@id/list_periods" />
+            app:destination="@id/list_periods"
+            app:popUpToInclusive="true"/>
         <action
             android:id="@+id/action_item_menu_side_boughtmade_to_boughWalletController"
-            app:destination="@id/boughWalletController" />
+            app:destination="@id/boughWalletController"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/item_menu_side_quoteCredit"
@@ -41,7 +46,8 @@
             android:id="@+id/action_save_credit_card"
             app:destination="@id/quoteCreditSave"
             app:enterAnim="@android:anim/fade_in"
-            app:exitAnim="@android:anim/fade_out" />
+            app:exitAnim="@android:anim/fade_out"
+            app:popUpToInclusive="true"/>
     </fragment>
 
     <fragment
@@ -55,7 +61,8 @@
             android:id="@+id/action_save_quote_credit_variable"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"
-            app:destination="@id/quoteCreditSaveVariable" />
+            app:destination="@id/quoteCreditSaveVariable"
+            app:popUpToInclusive="true"/>
     </fragment>
 
     <fragment
@@ -67,10 +74,12 @@
             android:id="@+id/action_list_bought_to_list_cc_quote"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"
-            app:destination="@+id/item_menu_side_boughtmade" />
+            app:destination="@+id/item_menu_side_boughtmade"
+            app:popUpToInclusive="true"/>
         <action
             android:id="@+id/action_list_bought_to_list_periods"
-            app:destination="@id/list_periods" />
+            app:destination="@id/list_periods"
+            app:popUpToInclusive="true"/>
     </fragment>
 
     <fragment
@@ -82,10 +91,12 @@
             android:id="@+id/action_list_periods_to_list_cc_quote"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"
-            app:destination="@+id/item_menu_side_boughtmade" />
+            app:destination="@+id/item_menu_side_boughtmade"
+            app:popUpToInclusive="true"/>
         <action
             android:id="@+id/action_list_periods_to_list_bought"
-            app:destination="@id/list_bought" />
+            app:destination="@id/list_bought"
+            app:popUpToInclusive="true"/>
     </fragment>
 
     <fragment
@@ -100,7 +111,8 @@
             android:id="@+id/action_quote_credit"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"
-            app:destination="@+id/item_menu_side_quoteCredit" />
+            app:destination="@+id/item_menu_side_quoteCredit"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/quoteCreditSaveVariable"
@@ -110,10 +122,12 @@
         <action
             android:id="@+id/action_quote_credt_variable"
             app:enterAnim="@android:anim/fade_in"
-            app:exitAnim="@android:anim/fade_out" />
+            app:exitAnim="@android:anim/fade_out"
+            app:popUpToInclusive="true"/>
         <action
             android:id="@+id/action_quoteCreditSaveVariable_to_item_menu_side_quoteCreditVariable"
-            app:destination="@id/item_menu_side_quoteCreditVariable" />
+            app:destination="@id/item_menu_side_quoteCreditVariable"
+            app:popUpToInclusive="true"/>
 
     </fragment>
 
@@ -132,7 +146,8 @@
             android:id="@+id/action_buy_credit_card_to_item_menu_side_boughtmade"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"
-            app:destination="@id/item_menu_side_boughtmade" />
+            app:destination="@id/item_menu_side_boughtmade"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/item_menu_setting_about_it"
@@ -148,7 +163,8 @@
             android:id="@+id/action_listCreditCard_to_createCreditCard"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"
-            app:destination="@id/createCreditCard" />
+            app:destination="@id/createCreditCard"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/createCreditCard"
@@ -159,10 +175,12 @@
             android:id="@+id/action_createCreditCard_to_listCreditCard"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"
-            app:destination="@+id/item_menu_setting_credit_card" />
+            app:destination="@+id/item_menu_setting_credit_card"
+            app:popUpToInclusive="true"/>
         <action
             android:id="@+id/action_createCreditCard_to_listCreditCardSetting"
-            app:destination="@id/listCreditCardSetting" />
+            app:destination="@id/listCreditCardSetting"
+            app:popUpToInclusive="true"/>
     </fragment>
 
     <fragment
@@ -174,7 +192,8 @@
             android:id="@+id/action_item_menu_setting_taxes_to_taxes"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"
-            app:destination="@id/taxes" />
+            app:destination="@id/taxes"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/taxes"
@@ -185,7 +204,8 @@
             android:id="@+id/action_taxes_to_item_menu_setting_taxes"
             app:enterAnim="@android:anim/fade_in"
             app:exitAnim="@android:anim/fade_out"
-            app:destination="@id/item_menu_setting_taxes" />
+            app:destination="@id/item_menu_setting_taxes"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/cash_advance_fragment"
@@ -194,7 +214,8 @@
         tools:layout="@layout/cash_advance_credit_card" >
         <action
             android:id="@+id/action_cash_advance_fragment_to_item_menu_side_boughtmade"
-            app:destination="@id/item_menu_side_boughtmade" />
+            app:destination="@id/item_menu_side_boughtmade"
+            app:popUpToInclusive="true"/>
     </fragment>
 
     <fragment
@@ -205,23 +226,27 @@
     <fragment
         android:id="@+id/creditCardSettingFragment"
         android:name="co.japl.android.myapplication.finanzas.controller.CreditCardSettingFragment"
-        android:label="fragment_credit_card_setting"
+        android:label="@string/title_toolbar_fragment_credit_card_setting"
         tools:layout="@layout/fragment_credit_card_setting" >
         <action
             android:id="@+id/action_creditCardSettingFragment_to_listCreditCardSetting"
-            app:destination="@id/listCreditCardSetting" />
+            app:destination="@id/listCreditCardSetting"
+            app:popUpTo="@id/listCreditCardSetting"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/listCreditCardSetting"
         android:name="co.japl.android.myapplication.controller.ListCreditCardSetting"
-        android:label="fragment_list_credit_card_setting"
+        android:label="@string/title_toolbar_fragment_list_credit_card_setting"
         tools:layout="@layout/fragment_list_credit_card_setting" >
         <action
             android:id="@+id/action_listCreditCardSetting_to_createCreditCard"
-            app:destination="@id/createCreditCard" />
+            app:destination="@id/createCreditCard"
+            app:popUpToInclusive="true"/>
         <action
             android:id="@+id/action_listCreditCardSetting_to_creditCardSettingFragment"
-            app:destination="@id/creditCardSettingFragment" />
+            app:destination="@id/creditCardSettingFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/boughWalletController"
@@ -229,7 +254,8 @@
         android:label="BoughWalletController" >
         <action
             android:id="@+id/action_boughWalletController_to_item_menu_side_boughtmade"
-            app:destination="@id/item_menu_side_boughtmade" />
+            app:destination="@id/item_menu_side_boughtmade"
+            app:popUpToInclusive="true"/>
     </fragment>
 
 </navigation>
