--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -17,6 +17,10 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:editTextBackground">@color/black</item>
+        <item name="android:editTextColor">@color/white</item>
+        <item name="editTextBackground">@color/black</item>
+        <item name="editTextColor">@color/white</item>
         <!-- Customize your theme here. -->
 
     </style>
