--- a/app/src/main/res/layout-land/list_credit_card_quote.xml
+++ b/app/src/main/res/layout-land/list_credit_card_quote.xml
@@ -368,11 +368,13 @@
 
             <Button
                 android:id="@+id/btnCutOffHistory"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
                 android:text="@string/cut_off_history"
-                android:visibility="invisible" />
+                app:icon="@drawable/ic_baseline_attach_money_24"/>
+
         </LinearLayout>
 
     <LinearLayout
