--- a/app/src/main/res/layout-land/quote_credit.xml
+++ b/app/src/main/res/layout-land/quote_credit.xml
@@ -41,78 +41,45 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         tools:layout_editor_absoluteX="0dp">
 
-        <TextView
-            android:id="@+id/lNameItem"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingLeft="10dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
-            android:text="@string/credit_value"
-            android:textStyle="bold" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_height="match_parent" android:layout_width="match_parent" android:layout_weight="1">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etNameItem"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:ems="10"
-            android:hint="@string/money_hint"
+            android:hint="@string/credit_value"
             android:inputType="numberSigned" />
-    </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-        tools:layout_editor_absoluteX="1dp">
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:autoText="false"
-            android:text="@string/tax"
-            android:textAlignment="viewStart"
-            android:textStyle="bold" />
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_height="match_parent" android:layout_width="match_parent" android:layout_weight="2">
+
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etTax"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="@string/interest_value_hint"
+            android:hint="@string/tax"
             android:inputType="numberDecimal"
             android:textAlignment="textEnd" />
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingLeft="5dp"
-            android:text="@string/percent_symbol"
-            android:textStyle="bold" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingLeft="5dp"
-            android:text="@string/months"
-            android:textStyle="bold" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_height="match_parent" android:layout_width="match_parent" android:layout_weight="2">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etMonths"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="@string/months_number_hint"
+            android:hint="@string/months"
             android:inputType="number|textPersonName" />
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -121,7 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
         tools:layout_editor_absoluteX="1dp">
 
     </LinearLayout>
