--- a/app/src/main/res/layout/buys_credit_card.xml
+++ b/app/src/main/res/layout/buys_credit_card.xml
@@ -45,23 +45,21 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/llCreditCardAssign">
 
-        <TextView
-            android:id="@+id/lDate"
-            android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/bought_date_time"
-            android:textStyle="bold" />
+            android:layout_weight="1">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/dtBought"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="@string/format_date"
+            android:hint="@string/bought_date_time"
             android:inputType="date"
             android:textAlignment="textEnd" />
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -73,21 +71,16 @@
         app:layout_constraintTop_toBottomOf="@+id/llDate"
         tools:layout_editor_absoluteX="0dp">
 
-        <TextView
-            android:id="@+id/lNameItem"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingLeft="10dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
-            android:text="@string/product_name"
-            android:textStyle="bold" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etNameItem"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/product_name" />
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -99,18 +92,11 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
         tools:layout_editor_absoluteX="1dp">
 
-        <TextView
-            android:id="@+id/lProductValue"
-            android:layout_width="261dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
-            android:text="@string/product_value"
-            android:textStyle="bold" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etProductValue"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -119,6 +105,7 @@
             android:hint="@string/product_value"
             android:inputType="numberSigned"
             android:textAlignment="textEnd" />
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -148,8 +135,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="0.0"
-            android:inputType="numberSigned"
             android:textAlignment="textEnd" />
 
         <TextView
@@ -172,26 +157,19 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayoutTax"
         tools:layout_editor_absoluteX="1dp">
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="52dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
-            android:text="@string/months"
-            android:textStyle="bold" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etMonths"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:ems="10"
             android:hint="@string/months_number"
             android:inputType="number|textPersonName"
             android:textAlignment="textEnd" />
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -221,7 +199,6 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="@string/quotes_value"
-            android:inputType="number|textPersonName"
             android:textAlignment="textEnd" />
     </LinearLayout>
 
