--- a/app/src/main/res/layout/quote_credit.xml
+++ b/app/src/main/res/layout/quote_credit.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -31,22 +32,20 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         tools:layout_editor_absoluteX="0dp">
 
-        <TextView
-            android:id="@+id/lNameItem"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingLeft="10dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
-            android:text="@string/credit_value" />
 
-        <EditText
-            android:id="@+id/etNameItem"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:ems="10"
-            android:hint="@string/credit_value"
-            android:inputType="numberSigned" />
+<com.google.android.material.textfield.TextInputLayout
+     android:layout_height="match_parent" android:layout_width="match_parent">
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/etNameItem"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:ems="10"
+        android:hint="@string/credit_value"
+        android:inputType="numberSigned"
+        android:numeric="decimal"
+        android:textAlignment="textEnd" />
+</com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -58,37 +57,18 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
         tools:layout_editor_absoluteX="1dp">
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="138dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:autoText="false"
-            android:paddingLeft="10dp"
-            android:paddingTop="15dp"
-            android:paddingRight="10dp"
-            android:text="@string/tax"
-            android:textAlignment="viewStart" />
-
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_height="wrap_content" android:layout_width="match_parent">
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etTax"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="0.0"
+            android:hint="@string/tax"
             android:inputType="numberDecimal"
             android:textAlignment="textEnd" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingLeft="5dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
-            android:text="@string/percent_symbol" />
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -100,24 +80,19 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
         tools:layout_editor_absoluteX="1dp">
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="52dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
-            android:text="@string/months" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_height="wrap_content" android:layout_width="match_parent">
 
-        <EditText
-            android:id="@+id/etMonths"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="@string/months_number"
-            android:inputType="number|textPersonName" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etMonths"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="@string/months"
+                android:inputType="number|textPersonName"
+                android:textAlignment="textEnd" />
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
